[package]
name = "trait_test"
version = "0.1.0"
authors = ["mibes <mibes@avaya.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.24"
tokio = { version = "0.2.11", features = ["rt-core", "time", "macros"] }
mockall = "0.6.0"